Adding responsive menu

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
 <title>
   
-    Bootstrap
+    Bootstrap Offline
   
 </title>
 
@@ -32,14 +32,16 @@
 <link rel="apple-touch-icon-precomposed" sizes="144x144" href="assets/ico/apple-touch-icon-144-precomposed.png">
                                <link rel="shortcut icon" href="assets/ico/favicon.ico">
 
-  </head>
-  <body class="bs-docs-home">
-    <a class="sr-only" href="#content">Skip to main content</a>
-
     <!-- Docs master nav -->
     <header class="navbar navbar-static-top bs-docs-nav" id="top" role="banner">
   <div class="container">
     <div class="navbar-header">
+      <button class="navbar-toggle" type="button" data-toggle="collapse" data-target=".bs-navbar-collapse">
+        <span class="sr-only">Toggle navigation</span>
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+      </button>
       <a href="index.html" class="navbar-brand">Bootstrap</a>
     </div>
     <nav class="collapse navbar-collapse bs-navbar-collapse" role="navigation">
@@ -47,7 +49,7 @@
         <li>
           <a href="getting-started.html">Getting started</a>
         </li>
-        <li>
+        <li class="active">
           <a href="css.html">CSS</a>
         </li>
         <li>
