width problems solved.

--- a/css.html
+++ b/css.html
@@ -32,6 +32,13 @@
 <link rel="apple-touch-icon-precomposed" sizes="144x144" href="assets/ico/apple-touch-icon-144-precomposed.png">
                                <link rel="shortcut icon" href="assets/ico/favicon.ico">
 
+
+<style>
+  body {
+    min-width:600px !important;
+}
+</style>
+
   </head>
   <body>
     <a class="sr-only" href="#content">Skip to main content</a>
@@ -3438,31 +3445,6 @@
 <script src="dist/js/bootstrap.min.js"></script>
 <script src="assets/js/docs.min.js"></script>
 
-
-
-<script>
-  window.twttr = (function (d,s,id) {
-    var t, js, fjs = d.getElementsByTagName(s)[0];
-    if (d.getElementById(id)) return; js=d.createElement(s); js.id=id; js.async=1;
-    js.src="https://platform.twitter.com/widgets.js"; fjs.parentNode.insertBefore(js, fjs);
-    return window.twttr || (t = { _e: [], ready: function(f){ t._e.push(f) } });
-  }(document, "script", "twitter-wjs"));
-</script>
-
-<!-- Analytics
-================================================== -->
-<script>
-  var _gauges = _gauges || [];
-  (function() {
-    var t   = document.createElement('script');
-    t.async = true;
-    t.id    = 'gauges-tracker';
-    t.setAttribute('data-site-id', '4f0dc9fef5a1f55508000013');
-    t.src = '//secure.gaug.es/track.js';
-    var s = document.getElementsByTagName('script')[0];
-    s.parentNode.insertBefore(t, s);
-  })();
-</script>
 
   </body>
 </html>
