--- a/components.html
+++ b/components.html
@@ -25,6 +25,12 @@
 <link rel="apple-touch-icon-precomposed" sizes="144x144" href="assets/ico/apple-touch-icon-144-precomposed.png">
                                <link rel="shortcut icon" href="assets/ico/favicon.ico">
 
+<style>
+  body {
+    min-width:600px !important;
+}
+</style>
+
   </head>
   <body>
     <a class="sr-only" href="#content">Skip to main content</a>
@@ -4141,52 +4147,7 @@
 
     </div>
 
-    <!-- Footer
-================================================== -->
-<footer class="bs-docs-footer" role="contentinfo">
-  <div class="container">
-    <div class="bs-docs-social">
-  <ul class="bs-docs-social-buttons">
-    <li>
-      <iframe class="github-btn" src="http://ghbtns.com/github-btn.html?user=twbs&amp;repo=bootstrap&amp;type=watch&amp;count=true" width="100" height="20" title="Star on GitHub"></iframe>
-    </li>
-    <li>
-      <iframe class="github-btn" src="http://ghbtns.com/github-btn.html?user=twbs&amp;repo=bootstrap&amp;type=fork&amp;count=true" width="102" height="20" title="Fork on GitHub"></iframe>
-    </li>
-    <li class="follow-btn">
-      <a href="https://twitter.com/twbootstrap" class="twitter-follow-button" data-link-color="#0069D6" data-show-count="true">Follow @twbootstrap</a>
-    </li>
-    <li class="tweet-btn">
-      <a href="https://twitter.com/share" class="twitter-share-button" data-url="http://getbootstrap.com/" data-count="horizontal" data-via="twbootstrap" data-related="mdo:Creator of Bootstrap">Tweet</a>
-    </li>
-  </ul>
-</div>
 
-
-    <p>Designed and built with all the love in the world by <a href="http://twitter.com/mdo" target="_blank">@mdo</a> and <a href="http://twitter.com/fat" target="_blank">@fat</a>.</p>
-    <p>Maintained by the <a href="https://github.com/twbs?tab=members">core team</a> with the help of <a href="https://github.com/twbs/bootstrap/graphs/contributors">our contributors</a>.</p>
-    <p>Code licensed under <a href="https://github.com/twbs/bootstrap/blob/master/LICENSE" target="_blank">MIT</a>, documentation under <a href="http://creativecommons.org/licenses/by/3.0/">CC BY 3.0</a>.</p>
-    <ul class="bs-docs-footer-links muted">
-      <li>Currently v</li>
-      <li>&middot;</li>
-      <li><a href="">GitHub</a></li>
-      <li>&middot;</li>
-      <li><a href="getting-started/#examples">Examples</a></li>
-      <li>&middot;</li>
-      <li><a href="2.3.2/">v2.3.2 docs</a></li>
-      <li>&middot;</li>
-      <li><a href="about/">About</a></li>
-      <li>&middot;</li>
-      <li><a href="">Expo</a></li>
-      <li>&middot;</li>
-      <li><a href="">Blog</a></li>
-      <li>&middot;</li>
-      <li><a href="/issues?state=open">Issues</a></li>
-      <li>&middot;</li>
-      <li><a href="/releases">Releases</a></li>
-    </ul>
-  </div>
-</footer>
 
 <!-- Bootstrap core JavaScript
 ================================================== -->
@@ -4195,31 +4156,6 @@
 <script src="dist/js/bootstrap.min.js"></script>
 <script src="assets/js/docs.min.js"></script>
 
-
-
-<script>
-  window.twttr = (function (d,s,id) {
-    var t, js, fjs = d.getElementsByTagName(s)[0];
-    if (d.getElementById(id)) return; js=d.createElement(s); js.id=id; js.async=1;
-    js.src="https://platform.twitter.com/widgets.js"; fjs.parentNode.insertBefore(js, fjs);
-    return window.twttr || (t = { _e: [], ready: function(f){ t._e.push(f) } });
-  }(document, "script", "twitter-wjs"));
-</script>
-
-<!-- Analytics
-================================================== -->
-<script>
-  var _gauges = _gauges || [];
-  (function() {
-    var t   = document.createElement('script');
-    t.async = true;
-    t.id    = 'gauges-tracker';
-    t.setAttribute('data-site-id', '4f0dc9fef5a1f55508000013');
-    t.src = '//secure.gaug.es/track.js';
-    var s = document.getElementsByTagName('script')[0];
-    s.parentNode.insertBefore(t, s);
-  })();
-</script>
 
   </body>
 </html>
